i finished the song search exercise

--- a/react-ejercicios/src/index.css
+++ b/react-ejercicios/src/index.css
@@ -51,6 +51,11 @@ hr {
   margin: 2rem auto;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 table {
   border-spacing: 0;
   border-collapse: collapse;
@@ -68,6 +73,13 @@ td {
   .grid-1-2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    align-items: start;
+    gap: 2rem;
+  }
+  
+  .grid-1-3 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     align-items: start;
     gap: 2rem;
   }
