--- a/react-ejercicios/src/index.css
+++ b/react-ejercicios/src/index.css
@@ -56,6 +56,32 @@ img {
   height: auto;
 }
 
+label {
+  padding: .5rem 0;
+  margin: 0 0 .5rem 0;
+  display: inline-block;
+  color: #444;
+  font-weight: bold;
+  line-height: 1;
+  cursor: pointer;
+}
+
+select {
+  border: thin solid #dedede;
+  border-radius: .25rem;
+  padding: .5rem;
+  margin: 0 0 .5rem 0;
+  display: block;
+  width: 100%;
+  color: #444;
+  font-size: 1rem;
+  line-height: 1;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+
+
 table {
   border-spacing: 0;
   border-collapse: collapse;
