--- a/react-ejercicios/src/index.css
+++ b/react-ejercicios/src/index.css
@@ -10,7 +10,9 @@ html {
   box-sizing: inherit;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="email"],
+textarea {
   border: thin solid #dedede;
   border-radius: 0.25rem;
   padding: 0.75rem;
@@ -22,6 +24,12 @@ input[type="text"] {
   line-height: 1;
   background-color: transparent;
 }
+
+textarea {
+	font-family: inherit;
+	resize: none;
+}
+
 
 button,
 input[type="submit"],
