--- a/react-rutas/src/index.css
+++ b/react-rutas/src/index.css
@@ -10,6 +10,19 @@ html {
 	box-sizing: inherit;
 }
 
+a {
+	margin-right: 1rem;
+}
+
+li {
+	margin-bottom: 1rem;
+}
+
 hr {
 	margin: 2rem auto;
+}
+
+.active {
+	font-weight: bold;
+	color: #61dafb;
 }
