--- a/react-rutas/src/index.css
+++ b/react-rutas/src/index.css
@@ -1,25 +1,25 @@
 html {
-	box-sizing: border-box;
-	font-size: 16px;
-	font-family: sans-serif;
+  box-sizing: border-box;
+  font-size: 16px;
+  font-family: sans-serif;
 }
 
 *,
 *:after,
 *::before {
-	box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 a {
-	margin-right: 1rem;
+  margin-right: 1rem;
 }
 
 li {
-	margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
-input[type="text"],
-input[type="email"],
+input[type='text'],
+input[type='email'],
 textarea {
   border: thin solid #dedede;
   border-radius: 0.25rem;
@@ -34,14 +34,14 @@ textarea {
 }
 
 textarea {
-	font-family: inherit;
-	resize: none;
+  font-family: inherit;
+  resize: none;
 }
 
-
 button,
-input[type="submit"],
-input[type="reset"] {
+input[type='button'],
+input[type='submit'],
+input[type='reset'] {
   border: thin solid #444;
   border-radius: 0.25rem;
   padding: 0.5rem 1rem;
@@ -59,6 +59,13 @@ input[type="reset"] {
   cursor: pointer;
 }
 
+input[type='button']:disabled {
+  border-color: rgba(118, 118, 118, 0.3);
+  color: rgba(16, 16, 16, 0.3);
+  background-color: rgba(239, 239, 239, 0.3);
+  cursor: default;
+}
+
 form {
   margin-bottom: 1rem;
 }
@@ -73,8 +80,8 @@ img {
 }
 
 label {
-  padding: .5rem 0;
-  margin: 0 0 .5rem 0;
+  padding: 0.5rem 0;
+  margin: 0 0 0.5rem 0;
   display: inline-block;
   color: #444;
   font-weight: bold;
@@ -84,9 +91,9 @@ label {
 
 select {
   border: thin solid #dedede;
-  border-radius: .25rem;
-  padding: .5rem;
-  margin: 0 0 .5rem 0;
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+  margin: 0 0 0.5rem 0;
   display: block;
   width: 100%;
   color: #444;
@@ -95,8 +102,6 @@ select {
   background-color: transparent;
   cursor: pointer;
 }
-
-
 
 table {
   border-spacing: 0;
@@ -118,7 +123,7 @@ td {
     align-items: start;
     gap: 2rem;
   }
-  
+
   .grid-1-3 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -128,6 +133,6 @@ td {
 }
 
 .active {
-	font-weight: bold;
-	color: #61dafb;
+  font-weight: bold;
+  color: #61dafb;
 }
